--- a/templates/login.html
+++ b/templates/login.html
@@ -2,6 +2,52 @@
 {% extends 'layout/base.html' %}
 <!--fblock-->
 {% block body %}
+<!-- shortcut to generate a vaible location => .container>.row>.col-md-4 -->
+<div class="container">
+    <div class="row form-row">
+        <div class="col-lg-4 ">
+            <h1 class="my-4 display-4 text-center">Sign In</h1>
+            <form class="shadow-lg p-3 rounded bg-light" method="post">
+                <div class="mb-3">
+                    <label for="email" class="form-label">Email address</label>
+                    <input type="email" class="form-control" id="email" name="email" placeholder="ex: Ravi@gmail.com" aria-describedby="emailHelp">
+                    {% if 'email' in errors %}
+                    <div id="emailHelp" class="form-text text-danger">{{errors['email']}}</div>
+                    {% endif %}
+                </div>
+                <div class="mb-3">
+                    <label for="password" class="form-label">Password</label>
+                    <input type="password" class="form-control" id="password" name="password"
+                        placeholder="Your Password" aria-describedby="pwdHelp">
+                        {% if 'password' in errors %}
+                    <div id="pwdHelp" class="form-text text-danger">{{errors['password']}}</div>
+                    {% endif %}  
+                </div>
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </form>
+        </div>
+    </div>
+</div>
+
+{% endblock %}
+
+{% block css %}
+<style>
+    .form-row {
+        display: flex;
+        height: 90vh;
+        justify-content: center;
+        align-items: center;
+    }
+
+    h1 {
+        color: rgb(255, 147, 69);
+    }
+
+    main {
+        background-color: #efefef;
+    }
+</style>
 
 {% endblock %}
 
