--- a/templates/register.html
+++ b/templates/register.html
@@ -1,39 +1,49 @@
 {% extends 'layout/base.html' %}
 
 {% block body %}
-
-<div class="container"><!--shortcut to generate a vaible locaton=> .container and .row and .col-->
+<!-- shortcut to generate a vaible location => .container>.row>.col-md-4 -->
+<div class="container">
     <div class="row form-row">
-        <div class="col-md-3">
+        <div class="col-lg-4 ">
             <h1 class="my-4 text-primary">Register An Account</h1>
-            <form class="shadow-lg p-3 rounded">
+            {% if error_list %}
+            {% for msg in error_list %}
+            <p class="text-danger text-small">
+                {{ msg|e }}
+            </p>
+            {% endfor %}
+            {% endif %}
+
+            <form class="shadow-lg p-3 rounded bg-light" method="POST">
                 <div class="mb-3">
-                  <label for="Email" class="form-label">Email address</label>
-                  <input type="email" class="form-control" id="Email" aria-describedby="email">
-                  
+                    <label for="email" class="form-label">Email address</label>
+                    <input type="email" class="form-control" id="email" name="email">
                 </div>
+
                 <div class="mb-3">
-                    <label for="username" class="form-label">username</label>
+                    <label for="username" class="form-label">Username</label>
                     <input type="text" class="form-control" id="username" name="username">
-                    
-                  </div>
-                <div class="mb-3">
-                  <label for="password" class="form-label">Password</label>
-                  <input type="password" class="form-control" id="password" name="password">
-                  <div class="form-text" id="passHelp">Password should be min 6 chars</div>
                 </div>
+
+                <div class="mb-3">
+                    <label for="password" class="form-label">Password</label>
+                    <input type="password" class="form-control" id="password" name="password"
+                        aria-describedby="passHelp">
+                    <div class="form-text" id="passHelp">Password should be min 6 chars</div>
+                </div>
+
                 <div class="mb-3">
                     <label for="confirmpass" class="form-label">Confirm Password</label>
                     <input type="password" class="form-control" id="confirmpass" name="confirmpass">
-                  </div>
+                </div>
                 <button type="submit" class="btn btn-primary">Submit</button>
-              </form>
-            
+            </form>
         </div>
     </div>
 </div>
 
 {% endblock %}
+
 {% block css %}
 <style>
     .form-row {
@@ -42,11 +52,11 @@
         justify-content: center;
         align-items: center;
     }
-    main{
-        background-image: url('https://images.unsplash.com/photo-1663311587248-f87e414e2ca6?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80');
-        background-position: center;
+
+    main {
+        background-image: url('https://images.unsplash.com/photo-1616363088386-31c4a8414858?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80');
+        background-position: bottom;
         background-size: cover;
     }
-
 </style>
 {% endblock %}
