--- a/templates/parking_system.html
+++ b/templates/parking_system.html
@@ -7,3 +7,19 @@
 </form>
 
 {% endblock %}
+{% block css %}
+<style>
+    .form-row {
+        display: flex;
+        height: 90vh;
+        justify-content: center;
+        align-items: center;
+    }
+
+    main {
+        background-image: url('https://images.unsplash.com/photo-1616363088386-31c4a8414858?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80');
+        background-position: bottom;
+        background-size: cover;
+    }
+</style>
+{% endblock %}
