--- a/templates/login.html
+++ b/templates/login.html
@@ -1,16 +1,16 @@
-<!--fextends-->
 {% extends 'layout/base.html' %}
-<!--fblock-->
+
 {% block body %}
 <!-- shortcut to generate a vaible location => .container>.row>.col-md-4 -->
 <div class="container">
     <div class="row form-row">
         <div class="col-lg-4 ">
             <h1 class="my-4 display-4 text-center">Sign In</h1>
+         
             <form class="shadow-lg p-3 rounded bg-light" method="post">
                 <div class="mb-3">
                     <label for="email" class="form-label">Email address</label>
-                    <input type="email" class="form-control" id="email" name="email" placeholder="ex: Ravi@gmail.com" aria-describedby="emailHelp">
+                    <input type="email" class="form-control" id="email" name="email" placeholder="ex: Ravi@gmail.com"  aria-describedby="emailHelp">
                     {% if 'email' in errors %}
                     <div id="emailHelp" class="form-text text-danger">{{errors['email']}}</div>
                     {% endif %}
@@ -18,10 +18,10 @@
                 <div class="mb-3">
                     <label for="password" class="form-label">Password</label>
                     <input type="password" class="form-control" id="password" name="password"
-                        placeholder="Your Password" aria-describedby="pwdHelp">
-                        {% if 'password' in errors %}
-                    <div id="pwdHelp" class="form-text text-danger">{{errors['password']}}</div>
-                    {% endif %}  
+                        placeholder="Your Password" aria-describedby="pwdHelp">    
+                     {% if 'password' in errors %}
+                        <div id="pwdHelp" class="form-text text-danger">{{errors['password']}}</div>
+                        {% endif %}  
                 </div>
                 <button type="submit" class="btn btn-primary">Submit</button>
             </form>
@@ -41,14 +41,12 @@
     }
 
     h1 {
-        color: rgb(255, 147, 69);
+        color: rgb(69, 255, 128);
     }
 
     main {
         background-color: #efefef;
+        background-image: url('https://images.unsplash.com/photo-1517026575980-3e1e2dedeab4?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8OXx8Y2FyJTIwcGFyayUyMGRldGVjdGlvbnxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=1000&q=60');
     }
 </style>
-
 {% endblock %}
-
-
