--- a/templates/parking_system.html
+++ b/templates/parking_system.html
@@ -3,11 +3,14 @@
 {% block body %}
 
 <form method="post">
-    <button>Start Parking Detection System</button>
-
+    <button><li class="nav-item"><a href="/" class="btn btn-outline-success">Parking Detection System</a></li></button>
+    <button><li class="nav-item">
+      <a href="/generate" class="btn btn-outline-success">Create</a>
+  </li></button>
 </form>
 
 {% endblock %}
+
 {% block css %}
 <style>
   main {
