--- a/templates/layout/base.html
+++ b/templates/layout/base.html
@@ -27,6 +27,11 @@
                         <a class="nav-link active" href="/" aria-current="page">Home <span
                                 class="visually-hidden">(current)</span></a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="/dashboard" aria-current="page">Dashboard <span
+                                class="visually-hidden">(current)</span></a>
+                    </li>
+                    
                 </ul>
 
                 <ul class="navbar-nav mt-2 mt-lg-0 ">
@@ -34,6 +39,10 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/dashboard">{{session.username}}</a>
                     </li>
+                    <li class="nav-item">
+                        <li class="nav-item">
+                            <a class="nav-link" href="/detect">View Parkings</a>
+                        </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/logout">Logout</a>
                     </li>
