--- a/templates/login.html
+++ b/templates/login.html
@@ -5,10 +5,10 @@
 <div class="container">
     <div class="row form-row">
         <div class="col-lg-4 ">
-            <h1 class="my-4 display-4 text-center">Sign In</h1>
+            <h1 class="my-4 display-3 text-center">Sign In</h1>
          
             <form class="shadow-lg p-3 rounded bg-light" method="post">
-                <div class="mb-3">
+                <div class="mb-2">
                     <label for="email" class="form-label">Email address</label>
                     <input type="email" class="form-control" id="email" name="email" placeholder="ex: Ravi@gmail.com"  aria-describedby="emailHelp">
                     {% if 'email' in errors %}
@@ -34,7 +34,7 @@
 {% block css %}
 <style>
     .form-row {
-        display: flex;
+        display: flow-root;
         height: 90vh;
         justify-content: center;
         align-items: center;
@@ -46,7 +46,9 @@
 
     main {
         background-color: #efefef;
-        background-image: url('https://images.unsplash.com/photo-1517026575980-3e1e2dedeab4?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8OXx8Y2FyJTIwcGFyayUyMGRldGVjdGlvbnxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=1000&q=60');
+        background-image: url('https://images.unsplash.com/photo-1534791108293-e080c7d856e7?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80');
+        background-size: cover;
+        background-position: bottom;
     }
 </style>
 {% endblock %}
